kubernetes/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-list
spec:
  selector:
    matchLabels:
      app: todo-list-app
  template:
    metadata:
      labels:
        app: todo-list-app
    spec:
      containers:
        - name: todo-list-container
          image: kretz71/todo-backend:latest
          # Image Pull Policy "IfNotPresent" will use the image from local repository
          # Production should use "Always"
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: todo-list-svc
spec:
  selector:
    app: todo-list-app
  ports:
    - port: 80
      targetPort: 8080
