kubernetes/jwt-validate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jwt-validate
  namespace: todo
spec:
  selector:
    matchLabels:
      app: jwt-validate-app
  template:
    metadata:
      labels:
        app: jwt-validate-app
    spec:
      containers:
        - name: jwt-validate-app
          image: kretz71/jwt-validator-service:latest
          # Image Pull Policy "IfNotPresent" will use the image from local repository
          # Production should use "Always"
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "128Mi"
              cpu: "250m"
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: jwt-validate-svc
  namespace: todo
spec:
  selector:
    app: jwt-validate-app
  ports:
  - port: 80
    targetPort: 5000
