kubernetes/keycloak.yaml
# This will enable keycloak in development mode for this demo.
# Follow this page to configure the application
# https://www.keycloak.org/getting-started/getting-started-docker
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-app
  template:
    metadata:
      labels:
        app: keycloak-app
    spec:
      # https://www.keycloak.org/server/containers
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:latest
          args: ["start-dev", "--hostname-strict=false"]
          ports:
            - name: http
              containerPort: 8080
          resources:
            limits:
              memory: "521Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-svc
  namespace: todo
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: keycloak-app
  type: ClusterIP
