kubernetes/traefik-ingress.yaml
# Check examples on how to configure NGinx Ingress here - https://github.com/nginxinc/kubernetes-ingress/tree/v3.4.2/examples
# It is possible to add custom directives and check Authentication
#
# For this to work on Cognito redirect, the connection must be https. So, add the TLS manually (best approach)
#
#    kubectl create secret tls traefik-self-tls --key traefik.server.key --cert traefik.server.crt
#
# Check documentation on how to add a valid certificate in K8s
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-api-prefix
  namespace: todo
spec:
  stripPrefix:
    prefixes:
      - "/api"
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: cors-policy
  namespace: todo
spec:
  headers:
    accessControlAllowMethods:
      - "GET"
      - "OPTIONS"
      - "PUT"
      - "POST"
      - "PATCH"
      - "DELETE"
    accessControlAllowOriginList:
       - "*"
#      - "http://localhost:4200"
#      - "http://traefik.todo.localdev.me"
#      - "https://traefik.todo.localdev.me"
    accessControlMaxAge: 100
    addVaryHeader: true
    accessControlAllowHeaders:
      - "*"
    accessControlAllowCredentials: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: jwt-validator
  namespace: todo
spec:
  # HTTP Forward auth is the only method available for community Traefik (also bundled with Rancher Desktop)
  # Reference: https://doc.traefik.io/traefik/middlewares/http/forwardauth/
  forwardAuth:
    # Resolve the names of other services within the cluster using 'namespace.svc.cluster.local'.    
    address: http://jwt-validate-svc.todo.svc.cluster.local/validate
    trustForwardHeader: true
    authResponseHeadersRegex: ^X-
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-ingress-route
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`traefik.todo.localdev.me`) && PathPrefix(`/api`)
      kind: Rule
      priority: 10
      services:
        - kind: Service
          name: todo-list-svc
          namespace: todo
          scheme: http
          port: 80
      middlewares:
        - name: strip-api-prefix
        - name: cors-policy
        - name: jwt-validator
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-todo
  namespace: todo
  annotations:
    # In Traefik v2, the annotation "traefik.ingress.kubernetes.io/router.entrypoints" is used within
    # Kubernetes Ingress resources to specify which entrypoints should be used by the router created
    # for that Ingress. Entrypoints in Traefik are named ports that Traefik listens on for incoming
    # traffic. This annotation allows you to define on which entrypoints (like HTTP or HTTPS) the Ingress
    # rule should apply, effectively controlling how and where traffic is received by Traefik for that particular Ingress.
    # web,websecure will would make Ingress accept http and https, but it does not work very well
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    #name: strip-api-prefix
spec:
  rules:
    - host: traefik.auth.localdev.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: keycloak-svc
                port:
                  number: 80
# Routing is maintened by Traefik IngressRoute
#    - host: traefik.todo.localdev.me
#      http:
#       paths:
#          - pathType: Prefix
##            path: /api
#            backend:
#              service:
#                name: todo-list-svc
#                port:
#                  number: 80
#    - host: host.docker.internal
#      http:
#       paths:
#          - pathType: Prefix
#            path: /
#            backend:
#              service:
#                name: jwt-validate-svc
#                port:
#                  number: 80
  #          - pathType: Prefix
  #            path: /
  #            backend:
  #             service:
  #                name: tca-web
  #                port:
  #                  number: 80
  tls:
    - hosts:
        - traefik.todo.localdev.me
        - traefik.auth.localdev.me
      secretName: todo-tls-secret
